# RepellingInteractionTrajectory

./: CMakeLists.txt  README.txt  integral.cc  main.cc  plotting.py  relPtPlotter.py  trajectory.cc
config/: StrongInteractionTrajectoryConfig.h  StrongInteractionTrajectoryConfig.in
include/: constants.h  event.h  force.h  kinematics.h  particle.h  simResults.h  trajectory.h  x_sec_weight.h
sim_results/: no_repulsion.txt  with_repulsion.txt
src/: constants.cpp  event.cpp  force.cpp  kinematics.cpp  particle.cpp  simResults.cpp  trajectory.cpp  x_sec_weight.cpp
